@@ -1,22 +1,22 @@
 package codecube;
 
-import codecube.core.AnalyzerResult;
 import codecube.domain.PullFile;
 import codecube.utils.GitHubRetriever;
+import com.google.common.collect.ImmutableMap;
+
 import com.google.gson.Gson;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.apache.commons.io.FilenameUtils;
 
 import java.io.IOException;
 import java.util.*;
 
 @Slf4j
 @RequiredArgsConstructor
-public class PrAnalyzer {
+public class PrRunner {
 
     private final Gson gson = new Gson();
-    private static final Map<String, BaseAnalyzer> ANALYZERS = Map.of("java", new JavaAnalyzer());
+    private static final Map<String, BaseAnalyzer> ANALYZERS = ImmutableMap.of("java", new JavaAnalyzer());
 
 
     private final String githubToken;
@@ -45,7 +45,7 @@ public class PrAnalyzer {
     }
 
     private void proceed() throws IOException {
-        List<PullFile> files = retrieveFiles();
+        /*List<PullFile> files = retrieveFiles();
         for (PullFile file : files) {
             System.out.println("======" + file.getFilename());
             String fileExtension = FilenameUtils.getExtension(file.getFilename());
@@ -79,7 +79,7 @@ public class PrAnalyzer {
                     System.err.println("" + analysisError.location() + ":" + analysisError.message())
 
             );
-        }
+        }*/
     }
 
     private static boolean isInChange(Collection<Integer> changedLines, int start, int end) {
@@ -94,7 +94,7 @@ public class PrAnalyzer {
 
     public static void main(String[] args) throws IOException {
         log.warn("PR:" + args[1]);
-        PrAnalyzer prAnalyzer = new PrAnalyzer(args[0], args[1]);
+        PrRunner prAnalyzer = new PrRunner(args[0], args[1]);
         prAnalyzer.proceed();
     }
 }
